--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "ember": "1.3.1",
     "ember-data": "1.0.0-beta.5",
     "handlebars": "1.3.0",
-    "twbs-bootstrap-sass": "~3.1.0"
+    "twbs-bootstrap-sass": "~3.1.0",
+    "holderjs": "~2.3.1"
   },
   "devDependencies": {
     "ember-mocha-adapter": "0.1.2"
